sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:4: error: '<-' expected but ')' found.
    for (i -> 1 to getTaille()-1){
                                ^DutchFlagAlgo:9: error: illegal start of simple expression
  }
  ^